styles.css
*,
*::after,
*::before {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: Arial, sans-serif;
}

h1 {
  color: #d93025;
  font-size: 20px;
  margin: 25px 45px;
  font-weight: normal;
}

/* ------ */
/* NAVBAR */
/* ------ */

.flex-container-navbar {
  display: flex;
  justify-content: flex-end;
  padding-right: 21.5px;
}

.flex-container-navbar * {
  padding: 19px 7.5px 4px 7.5px;
}

.nav-link {
  line-height: 24px;
  font-size: 13px;
  color: rgba(0, 0, 0, 0.87);
  text-decoration-color: rgba(0, 0, 0, 0.87);
  text-decoration-line: none;
}

.nav-link:hover {
  opacity: 0.85;
  text-decoration: underline;
}

/* --------- */
/* SEARCHBAR */
/* --------- */

.search-images-title {
  max-height: 201px;
  max-width: 272px;
  margin-left: auto;
  margin-right: auto;
}

.search-logo {
  display: block;
  margin-left: auto;
  margin-right: auto;
  margin-top: 42px;
  padding-top: 109px;
}

.search-subtext {
  position: relative;
  top: -16px;
  left: 215px;
  width: 50px;
  color: #4285f4;
  font: 16px/16px 'Roboto', arial, sans-serif;
  font-stretch: 100%;
  white-space: nowrap;
}

.search-bar {
  height: 44px;
  max-width: 582px;
  margin: 28px auto 0 auto;
  border: 1px solid #dfe1e5;
  border-radius: 24px;
  display: flex;
  align-items: center;
}

.images-bar {
  max-width: 534px;
  margin: 21px auto 0 auto;
  height: 46px;
}

.search-bar:hover {
  box-shadow: 0 1px 6px 0 rgba(32, 33, 36, 0.28);
  border-color: rgba(223, 225, 229, 0);
}

.flex-container-search-buttons {
  display: flex;
  justify-content: center;
}

.flex-container-search-buttons > button {
  background-color: #f2f2f2;
  border: 1px solid #f2f2f2;
  border-radius: 4px;
  color: #5f6368;
  font-family: arial, sans-serif;
  font-size: 14px;
  margin: 30px 4px;
  padding: 0 16px;
  line-height: 27px;
  height: 36px;
  min-width: 54px;
  text-align: center;
  cursor: pointer;
  user-select: none;
}

.search-icon {
  margin: 0 17px;
}

.image-search-button {
  background: transparent;
  border: none;
  outline: none;
  margin: 0 17px;
}

.image-search-button:hover {
  cursor: pointer;
}

.search-text {
  border: none;
  outline: none;
  flex: 100%;
  font: 16px arial, sans-serif;
  line-height: 34px;
  height: 34px;
  margin-right: 0px;
}

.google-search-button:hover {
  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
  background-color: #f8f8f8;
  border: 1px solid #c6c6c6;
  color: #222;
}

/* --------------- */
/* ADVANCED SEARCH */
/* --------------- */

.advanced-navbar {
  background: #f1f1f1;
  justify-content: space-between;
  align-items: center;
  max-height: 60px;
}

.advanced-link {
  padding: 0px 7.5px 0px 7.5px;
}

.nav-logo {
  padding: 15px 0px 10px 15px;
}

.nav-image-container,
.nav-image-container * {
  padding: 0px;
  height: 33px;
  width: 92px;
}

.advanced-navbar-image {
  max-width: 100%;
}

.line-break {
  border-bottom: 1px solid #ebebeb;
}

.advanced-form {
  display: flex;
  max-width: 1140px;
  min-width: 200px;
  margin: 40px 2% 0 45px;
  flex-direction: column;
}

.advanced-form-row {
  display: flex;
  flex-direction: row;
  min-height: 41px;
}

.advanced-input-title {
  min-width: 167px;
  width: 16%;
  font-size: 16px;
  height: 42px;
  font-weight: 500;
  color: #333;
}

.advanced-text-box {
  height: 30px;
  display: table-cell;
  vertical-align: middle;
}

.search-type {
  font-size: 13px;
}

.advanced-input {
  flex-grow: 1;
  text-align: left;
  max-width: 570px;
}

.advanced-input-button {
  flex-grow: 1;
  text-align: right;
  max-width: 570px;
}

.advanced-input > * {
  border-radius: 1px;
  border: 1px solid #d9d9d9;
  border-top: 1px solid #c0c0c0;
  font-size: 13px;
  height: 29px;
  padding: 1px 8px;
  width: 100%;
  text-align: left;
}

.example-text {
  font-size: 11px;
  color: rgb(102, 102, 102);
  font-family: monospace;
}

.advanced-input-desc {
  min-width: 10%;
}

.advanced-input-desc-content {
  display: none;
}

@media (min-width: 1070px) {
  .advanced-input-desc-content {
    display: inline-block;
    min-width: 160px;
    margin: 0 0 8px 1%;
    color: #555;
    font-size: 11px;
    padding-left: 5px;
    vertical-align: middle;
    height: 30px;
    padding: 9.5px 0px 9.5px 10px;
  }
  .search-desc-title {
    font-size: 13px;
    font-weight: 700;
    color: rgb(119, 119, 119);
    padding: 8.5px 0px;
  }
  .advanced-input-desc {
    width: 32%;
    min-width: 10%;
  }
  .two-line-desc {
    margin: -7px 0px 0px 0px;
  }
}
.advanced-button {
  height: 30px;
  min-width: 120px;
  padding: 0 12px;
  box-shadow: none;
  background-color: #4d90fe;
  border: 1px solid #3079ed;
  color: #fff;
  border-radius: 2px;
  cursor: default;
  font-size: 11px;
  font-weight: bold;
  text-align: center;
}

.advanced-button:hover {
  background-color: #357ae8;
}

